Add an example of text centered in an svg circle.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <p>Hello</p>
+
+    <svg width="500" height="500">
+      <circle cx="150" cy="150" r="50" stroke="red" stroke-width="3px" fill="white"/>
+      <text x="150" y="150" dominant-baseline="middle" text-anchor="middle">Anything</text>
+    </svg>
+
+
     <button id="downloadSVG">Download .svg</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.1.2/svg.min.js" type="text/javascript"></script>
     <script src="js/index.js" type="text/javascript"></script>
