--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/svg_styles.css">
     <title>Magic Triangle</title>
   </head>
   <body>
-
-    <!-- <svg width="500" height="500">
-      <circle cx="150" cy="150" r="50" stroke="red" stroke-width="3px" fill="white"/>
-      <text x="150" y="150" dominant-baseline="middle" text-anchor="middle">Anything</text>
-    </svg> -->
 
     <div id="svg-wrapper"></div>
 
