--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/svg_styles.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/svg_styles.css" />
     <title>Magic Triangle</title>
   </head>
   <body>
+    <div id="root"></div>
 
     <div id="svg-wrapper"></div>
 
     <button id="downloadSVG">Download .svg</button>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.1.2/svg.min.js" type="text/javascript"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.1.2/svg.min.js"
+      type="text/javascript"
+    ></script>
     <script src="js/index.js" type="text/javascript"></script>
   </body>
 </html>
