--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/svg_styles.css" />
+    <!-- <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/svg_styles.css" /> -->
     <title>Magic Triangle</title>
   </head>
   <body>
@@ -16,6 +16,5 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.1.2/svg.min.js"
       type="text/javascript"
     ></script>
-    <script src="js/index.js" type="text/javascript"></script>
   </body>
 </html>
